parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CALL
    COMMENT
    FUNCTION
    LBRACK
    MULTICOMMENT
    RBRACK

Grammar

Rule 0     S' -> uz
Rule 1     uz -> line uz
Rule 2     line -> stmt SEMICOL
Rule 3     uz -> error SEMICOL
Rule 4     uz -> <empty>
Rule 5     stmtblock -> LBRACE stmtS RBRACE
Rule 6     stmtblock -> LBRACE error RBRACE
Rule 7     stmtS -> stmt SEMICOL stmtS
Rule 8     stmtS -> error SEMICOL stmtS
Rule 9     stmtS -> <empty>
Rule 10    exp -> NAME LPAREN optargs RPAREN
Rule 11    optargs -> args
Rule 12    optargs -> <empty>
Rule 13    args -> exp COMMA args
Rule 14    args -> exp
Rule 15    exp -> exp PLUS exp
Rule 16    exp -> exp MINUS exp
Rule 17    exp -> exp MULTIPLY exp
Rule 18    exp -> exp DIVIDE exp
Rule 19    exp -> exp POWER exp
Rule 20    exp -> exp MODULUS exp
Rule 21    exp -> exp AND exp
Rule 22    exp -> exp OR exp
Rule 23    exp -> exp GT exp
Rule 24    exp -> exp LT exp
Rule 25    exp -> exp GTE exp
Rule 26    exp -> exp LTE exp
Rule 27    exp -> exp EE exp
Rule 28    exp -> exp NE exp
Rule 29    exp -> NAME
Rule 30    exp -> MINUS INT
Rule 31    exp -> MINUS FLOAT
Rule 32    exp -> INT
Rule 33    exp -> FLOAT
Rule 34    exp -> DEC exp
Rule 35    exp -> INC exp
Rule 36    stmt -> exp DEC
Rule 37    stmt -> exp INC
Rule 38    exp -> NOT exp
Rule 39    exp -> TRUE
Rule 40    exp -> FALSE
Rule 41    exp -> STRING
Rule 42    exp -> CHAR
Rule 43    exp -> LPAREN exp RPAREN
Rule 44    stmt -> MAKE NAME
Rule 45    stmt -> MAKE NAME EQUAL exp
Rule 46    stmt -> NAME EQUAL exp
Rule 47    stmt -> IF exp THEN stmtblock
Rule 48    stmt -> IF exp THEN stmtblock elsif ELSE THEN stmtblock
Rule 49    elsif -> ELIF exp THEN stmtblock elsif
Rule 50    elsif -> <empty>
Rule 51    stmt -> DO stmtblock WHILE exp
Rule 52    stmt -> FOR NAME EQUAL exp TO exp UNTIL step stmtblock
Rule 53    step -> exp
Rule 54    step -> <empty>
Rule 55    stmt -> PRINT LPAREN exp RPAREN
Rule 56    stmt -> RETURN exp

Terminals, with rules where they appear

AND                  : 21
CALL                 : 
CHAR                 : 42
COMMA                : 13
COMMENT              : 
DEC                  : 34 36
DIVIDE               : 18
DO                   : 51
EE                   : 27
ELIF                 : 49
ELSE                 : 48
EQUAL                : 45 46 52
FALSE                : 40
FLOAT                : 31 33
FOR                  : 52
FUNCTION             : 
GT                   : 23
GTE                  : 25
IF                   : 47 48
INC                  : 35 37
INT                  : 30 32
LBRACE               : 5 6
LBRACK               : 
LPAREN               : 10 43 55
LT                   : 24
LTE                  : 26
MAKE                 : 44 45
MINUS                : 16 30 31
MODULUS              : 20
MULTICOMMENT         : 
MULTIPLY             : 17
NAME                 : 10 29 44 45 46 52
NE                   : 28
NOT                  : 38
OR                   : 22
PLUS                 : 15
POWER                : 19
PRINT                : 55
RBRACE               : 5 6
RBRACK               : 
RETURN               : 56
RPAREN               : 10 43 55
SEMICOL              : 2 3 7 8
STRING               : 41
THEN                 : 47 48 48 49
TO                   : 52
TRUE                 : 39
UNTIL                : 52
WHILE                : 51
error                : 3 6 8

Nonterminals, with rules where they appear

args                 : 11 13
elsif                : 48 49
exp                  : 13 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 34 35 36 37 38 43 45 46 47 48 49 51 52 52 53 55 56
line                 : 1
optargs              : 10
step                 : 52
stmt                 : 2 7
stmtS                : 5 7 8
stmtblock            : 47 48 48 49 51 52
uz                   : 1 0

Parsing method: LALR

state 0

    (0) S' -> . uz
    (1) uz -> . line uz
    (3) uz -> . error SEMICOL
    (4) uz -> .
    (2) line -> . stmt SEMICOL
    (36) stmt -> . exp DEC
    (37) stmt -> . exp INC
    (44) stmt -> . MAKE NAME
    (45) stmt -> . MAKE NAME EQUAL exp
    (46) stmt -> . NAME EQUAL exp
    (47) stmt -> . IF exp THEN stmtblock
    (48) stmt -> . IF exp THEN stmtblock elsif ELSE THEN stmtblock
    (51) stmt -> . DO stmtblock WHILE exp
    (52) stmt -> . FOR NAME EQUAL exp TO exp UNTIL step stmtblock
    (55) stmt -> . PRINT LPAREN exp RPAREN
    (56) stmt -> . RETURN exp
    (10) exp -> . NAME LPAREN optargs RPAREN
    (15) exp -> . exp PLUS exp
    (16) exp -> . exp MINUS exp
    (17) exp -> . exp MULTIPLY exp
    (18) exp -> . exp DIVIDE exp
    (19) exp -> . exp POWER exp
    (20) exp -> . exp MODULUS exp
    (21) exp -> . exp AND exp
    (22) exp -> . exp OR exp
    (23) exp -> . exp GT exp
    (24) exp -> . exp LT exp
    (25) exp -> . exp GTE exp
    (26) exp -> . exp LTE exp
    (27) exp -> . exp EE exp
    (28) exp -> . exp NE exp
    (29) exp -> . NAME
    (30) exp -> . MINUS INT
    (31) exp -> . MINUS FLOAT
    (32) exp -> . INT
    (33) exp -> . FLOAT
    (34) exp -> . DEC exp
    (35) exp -> . INC exp
    (38) exp -> . NOT exp
    (39) exp -> . TRUE
    (40) exp -> . FALSE
    (41) exp -> . STRING
    (42) exp -> . CHAR
    (43) exp -> . LPAREN exp RPAREN

    error           shift and go to state 3
    $end            reduce using rule 4 (uz -> .)
    MAKE            shift and go to state 8
    NAME            shift and go to state 9
    IF              shift and go to state 10
    DO              shift and go to state 11
    FOR             shift and go to state 12
    PRINT           shift and go to state 13
    RETURN          shift and go to state 15
    MINUS           shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    DEC             shift and go to state 6
    INC             shift and go to state 7
    NOT             shift and go to state 19
    TRUE            shift and go to state 20
    FALSE           shift and go to state 21
    STRING          shift and go to state 22
    CHAR            shift and go to state 23
    LPAREN          shift and go to state 14

    uz                             shift and go to state 1
    line                           shift and go to state 2
    stmt                           shift and go to state 4
    exp                            shift and go to state 5

state 1

    (0) S' -> uz .



state 2

    (1) uz -> line . uz
    (1) uz -> . line uz
    (3) uz -> . error SEMICOL
    (4) uz -> .
    (2) line -> . stmt SEMICOL
    (36) stmt -> . exp DEC
    (37) stmt -> . exp INC
    (44) stmt -> . MAKE NAME
    (45) stmt -> . MAKE NAME EQUAL exp
    (46) stmt -> . NAME EQUAL exp
    (47) stmt -> . IF exp THEN stmtblock
    (48) stmt -> . IF exp THEN stmtblock elsif ELSE THEN stmtblock
    (51) stmt -> . DO stmtblock WHILE exp
    (52) stmt -> . FOR NAME EQUAL exp TO exp UNTIL step stmtblock
    (55) stmt -> . PRINT LPAREN exp RPAREN
    (56) stmt -> . RETURN exp
    (10) exp -> . NAME LPAREN optargs RPAREN
    (15) exp -> . exp PLUS exp
    (16) exp -> . exp MINUS exp
    (17) exp -> . exp MULTIPLY exp
    (18) exp -> . exp DIVIDE exp
    (19) exp -> . exp POWER exp
    (20) exp -> . exp MODULUS exp
    (21) exp -> . exp AND exp
    (22) exp -> . exp OR exp
    (23) exp -> . exp GT exp
    (24) exp -> . exp LT exp
    (25) exp -> . exp GTE exp
    (26) exp -> . exp LTE exp
    (27) exp -> . exp EE exp
    (28) exp -> . exp NE exp
    (29) exp -> . NAME
    (30) exp -> . MINUS INT
    (31) exp -> . MINUS FLOAT
    (32) exp -> . INT
    (33) exp -> . FLOAT
    (34) exp -> . DEC exp
    (35) exp -> . INC exp
    (38) exp -> . NOT exp
    (39) exp -> . TRUE
    (40) exp -> . FALSE
    (41) exp -> . STRING
    (42) exp -> . CHAR
    (43) exp -> . LPAREN exp RPAREN

    error           shift and go to state 3
    $end            reduce using rule 4 (uz -> .)
    MAKE            shift and go to state 8
    NAME            shift and go to state 9
    IF              shift and go to state 10
    DO              shift and go to state 11
    FOR             shift and go to state 12
    PRINT           shift and go to state 13
    RETURN          shift and go to state 15
    MINUS           shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    DEC             shift and go to state 6
    INC             shift and go to state 7
    NOT             shift and go to state 19
    TRUE            shift and go to state 20
    FALSE           shift and go to state 21
    STRING          shift and go to state 22
    CHAR            shift and go to state 23
    LPAREN          shift and go to state 14

    line                           shift and go to state 2
    uz                             shift and go to state 24
    stmt                           shift and go to state 4
    exp                            shift and go to state 5

state 3

    (3) uz -> error . SEMICOL

    SEMICOL         shift and go to state 25


state 4

    (2) line -> stmt . SEMICOL

    SEMICOL         shift and go to state 26


state 5

    (36) stmt -> exp . DEC
    (37) stmt -> exp . INC
    (15) exp -> exp . PLUS exp
    (16) exp -> exp . MINUS exp
    (17) exp -> exp . MULTIPLY exp
    (18) exp -> exp . DIVIDE exp
    (19) exp -> exp . POWER exp
    (20) exp -> exp . MODULUS exp
    (21) exp -> exp . AND exp
    (22) exp -> exp . OR exp
    (23) exp -> exp . GT exp
    (24) exp -> exp . LT exp
    (25) exp -> exp . GTE exp
    (26) exp -> exp . LTE exp
    (27) exp -> exp . EE exp
    (28) exp -> exp . NE exp

    DEC             shift and go to state 27
    INC             shift and go to state 28
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30
    MULTIPLY        shift and go to state 31
    DIVIDE          shift and go to state 32
    POWER           shift and go to state 33
    MODULUS         shift and go to state 34
    AND             shift and go to state 35
    OR              shift and go to state 36
    GT              shift and go to state 37
    LT              shift and go to state 38
    GTE             shift and go to state 39
    LTE             shift and go to state 40
    EE              shift and go to state 41
    NE              shift and go to state 42


state 6

    (34) exp -> DEC . exp
    (10) exp -> . NAME LPAREN optargs RPAREN
    (15) exp -> . exp PLUS exp
    (16) exp -> . exp MINUS exp
    (17) exp -> . exp MULTIPLY exp
    (18) exp -> . exp DIVIDE exp
    (19) exp -> . exp POWER exp
    (20) exp -> . exp MODULUS exp
    (21) exp -> . exp AND exp
    (22) exp -> . exp OR exp
    (23) exp -> . exp GT exp
    (24) exp -> . exp LT exp
    (25) exp -> . exp GTE exp
    (26) exp -> . exp LTE exp
    (27) exp -> . exp EE exp
    (28) exp -> . exp NE exp
    (29) exp -> . NAME
    (30) exp -> . MINUS INT
    (31) exp -> . MINUS FLOAT
    (32) exp -> . INT
    (33) exp -> . FLOAT
    (34) exp -> . DEC exp
    (35) exp -> . INC exp
    (38) exp -> . NOT exp
    (39) exp -> . TRUE
    (40) exp -> . FALSE
    (41) exp -> . STRING
    (42) exp -> . CHAR
    (43) exp -> . LPAREN exp RPAREN

    NAME            shift and go to state 44
    MINUS           shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    DEC             shift and go to state 6
    INC             shift and go to state 7
    NOT             shift and go to state 19
    TRUE            shift and go to state 20
    FALSE           shift and go to state 21
    STRING          shift and go to state 22
    CHAR            shift and go to state 23
    LPAREN          shift and go to state 14

    exp                            shift and go to state 43

state 7

    (35) exp -> INC . exp
    (10) exp -> . NAME LPAREN optargs RPAREN
    (15) exp -> . exp PLUS exp
    (16) exp -> . exp MINUS exp
    (17) exp -> . exp MULTIPLY exp
    (18) exp -> . exp DIVIDE exp
    (19) exp -> . exp POWER exp
    (20) exp -> . exp MODULUS exp
    (21) exp -> . exp AND exp
    (22) exp -> . exp OR exp
    (23) exp -> . exp GT exp
    (24) exp -> . exp LT exp
    (25) exp -> . exp GTE exp
    (26) exp -> . exp LTE exp
    (27) exp -> . exp EE exp
    (28) exp -> . exp NE exp
    (29) exp -> . NAME
    (30) exp -> . MINUS INT
    (31) exp -> . MINUS FLOAT
    (32) exp -> . INT
    (33) exp -> . FLOAT
    (34) exp -> . DEC exp
    (35) exp -> . INC exp
    (38) exp -> . NOT exp
    (39) exp -> . TRUE
    (40) exp -> . FALSE
    (41) exp -> . STRING
    (42) exp -> . CHAR
    (43) exp -> . LPAREN exp RPAREN

    NAME            shift and go to state 44
    MINUS           shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    DEC             shift and go to state 6
    INC             shift and go to state 7
    NOT             shift and go to state 19
    TRUE            shift and go to state 20
    FALSE           shift and go to state 21
    STRING          shift and go to state 22
    CHAR            shift and go to state 23
    LPAREN          shift and go to state 14

    exp                            shift and go to state 45

state 8

    (44) stmt -> MAKE . NAME
    (45) stmt -> MAKE . NAME EQUAL exp

    NAME            shift and go to state 46


state 9

    (46) stmt -> NAME . EQUAL exp
    (10) exp -> NAME . LPAREN optargs RPAREN
    (29) exp -> NAME .

    EQUAL           shift and go to state 47
    LPAREN          shift and go to state 48
    DEC             reduce using rule 29 (exp -> NAME .)
    INC             reduce using rule 29 (exp -> NAME .)
    PLUS            reduce using rule 29 (exp -> NAME .)
    MINUS           reduce using rule 29 (exp -> NAME .)
    MULTIPLY        reduce using rule 29 (exp -> NAME .)
    DIVIDE          reduce using rule 29 (exp -> NAME .)
    POWER           reduce using rule 29 (exp -> NAME .)
    MODULUS         reduce using rule 29 (exp -> NAME .)
    AND             reduce using rule 29 (exp -> NAME .)
    OR              reduce using rule 29 (exp -> NAME .)
    GT              reduce using rule 29 (exp -> NAME .)
    LT              reduce using rule 29 (exp -> NAME .)
    GTE             reduce using rule 29 (exp -> NAME .)
    LTE             reduce using rule 29 (exp -> NAME .)
    EE              reduce using rule 29 (exp -> NAME .)
    NE              reduce using rule 29 (exp -> NAME .)


state 10

    (47) stmt -> IF . exp THEN stmtblock
    (48) stmt -> IF . exp THEN stmtblock elsif ELSE THEN stmtblock
    (10) exp -> . NAME LPAREN optargs RPAREN
    (15) exp -> . exp PLUS exp
    (16) exp -> . exp MINUS exp
    (17) exp -> . exp MULTIPLY exp
    (18) exp -> . exp DIVIDE exp
    (19) exp -> . exp POWER exp
    (20) exp -> . exp MODULUS exp
    (21) exp -> . exp AND exp
    (22) exp -> . exp OR exp
    (23) exp -> . exp GT exp
    (24) exp -> . exp LT exp
    (25) exp -> . exp GTE exp
    (26) exp -> . exp LTE exp
    (27) exp -> . exp EE exp
    (28) exp -> . exp NE exp
    (29) exp -> . NAME
    (30) exp -> . MINUS INT
    (31) exp -> . MINUS FLOAT
    (32) exp -> . INT
    (33) exp -> . FLOAT
    (34) exp -> . DEC exp
    (35) exp -> . INC exp
    (38) exp -> . NOT exp
    (39) exp -> . TRUE
    (40) exp -> . FALSE
    (41) exp -> . STRING
    (42) exp -> . CHAR
    (43) exp -> . LPAREN exp RPAREN

    NAME            shift and go to state 44
    MINUS           shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    DEC             shift and go to state 6
    INC             shift and go to state 7
    NOT             shift and go to state 19
    TRUE            shift and go to state 20
    FALSE           shift and go to state 21
    STRING          shift and go to state 22
    CHAR            shift and go to state 23
    LPAREN          shift and go to state 14

    exp                            shift and go to state 49

state 11

    (51) stmt -> DO . stmtblock WHILE exp
    (5) stmtblock -> . LBRACE stmtS RBRACE
    (6) stmtblock -> . LBRACE error RBRACE

    LBRACE          shift and go to state 51

    stmtblock                      shift and go to state 50

state 12

    (52) stmt -> FOR . NAME EQUAL exp TO exp UNTIL step stmtblock

    NAME            shift and go to state 52


state 13

    (55) stmt -> PRINT . LPAREN exp RPAREN

    LPAREN          shift and go to state 53


state 14

    (43) exp -> LPAREN . exp RPAREN
    (10) exp -> . NAME LPAREN optargs RPAREN
    (15) exp -> . exp PLUS exp
    (16) exp -> . exp MINUS exp
    (17) exp -> . exp MULTIPLY exp
    (18) exp -> . exp DIVIDE exp
    (19) exp -> . exp POWER exp
    (20) exp -> . exp MODULUS exp
    (21) exp -> . exp AND exp
    (22) exp -> . exp OR exp
    (23) exp -> . exp GT exp
    (24) exp -> . exp LT exp
    (25) exp -> . exp GTE exp
    (26) exp -> . exp LTE exp
    (27) exp -> . exp EE exp
    (28) exp -> . exp NE exp
    (29) exp -> . NAME
    (30) exp -> . MINUS INT
    (31) exp -> . MINUS FLOAT
    (32) exp -> . INT
    (33) exp -> . FLOAT
    (34) exp -> . DEC exp
    (35) exp -> . INC exp
    (38) exp -> . NOT exp
    (39) exp -> . TRUE
    (40) exp -> . FALSE
    (41) exp -> . STRING
    (42) exp -> . CHAR
    (43) exp -> . LPAREN exp RPAREN

    NAME            shift and go to state 44
    MINUS           shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    DEC             shift and go to state 6
    INC             shift and go to state 7
    NOT             shift and go to state 19
    TRUE            shift and go to state 20
    FALSE           shift and go to state 21
    STRING          shift and go to state 22
    CHAR            shift and go to state 23
    LPAREN          shift and go to state 14

    exp                            shift and go to state 54

state 15

    (56) stmt -> RETURN . exp
    (10) exp -> . NAME LPAREN optargs RPAREN
    (15) exp -> . exp PLUS exp
    (16) exp -> . exp MINUS exp
    (17) exp -> . exp MULTIPLY exp
    (18) exp -> . exp DIVIDE exp
    (19) exp -> . exp POWER exp
    (20) exp -> . exp MODULUS exp
    (21) exp -> . exp AND exp
    (22) exp -> . exp OR exp
    (23) exp -> . exp GT exp
    (24) exp -> . exp LT exp
    (25) exp -> . exp GTE exp
    (26) exp -> . exp LTE exp
    (27) exp -> . exp EE exp
    (28) exp -> . exp NE exp
    (29) exp -> . NAME
    (30) exp -> . MINUS INT
    (31) exp -> . MINUS FLOAT
    (32) exp -> . INT
    (33) exp -> . FLOAT
    (34) exp -> . DEC exp
    (35) exp -> . INC exp
    (38) exp -> . NOT exp
    (39) exp -> . TRUE
    (40) exp -> . FALSE
    (41) exp -> . STRING
    (42) exp -> . CHAR
    (43) exp -> . LPAREN exp RPAREN

    NAME            shift and go to state 44
    MINUS           shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    DEC             shift and go to state 6
    INC             shift and go to state 7
    NOT             shift and go to state 19
    TRUE            shift and go to state 20
    FALSE           shift and go to state 21
    STRING          shift and go to state 22
    CHAR            shift and go to state 23
    LPAREN          shift and go to state 14

    exp                            shift and go to state 55

state 16

    (30) exp -> MINUS . INT
    (31) exp -> MINUS . FLOAT

    INT             shift and go to state 56
    FLOAT           shift and go to state 57


state 17

    (32) exp -> INT .

    DEC             reduce using rule 32 (exp -> INT .)
    INC             reduce using rule 32 (exp -> INT .)
    PLUS            reduce using rule 32 (exp -> INT .)
    MINUS           reduce using rule 32 (exp -> INT .)
    MULTIPLY        reduce using rule 32 (exp -> INT .)
    DIVIDE          reduce using rule 32 (exp -> INT .)
    POWER           reduce using rule 32 (exp -> INT .)
    MODULUS         reduce using rule 32 (exp -> INT .)
    AND             reduce using rule 32 (exp -> INT .)
    OR              reduce using rule 32 (exp -> INT .)
    GT              reduce using rule 32 (exp -> INT .)
    LT              reduce using rule 32 (exp -> INT .)
    GTE             reduce using rule 32 (exp -> INT .)
    LTE             reduce using rule 32 (exp -> INT .)
    EE              reduce using rule 32 (exp -> INT .)
    NE              reduce using rule 32 (exp -> INT .)
    THEN            reduce using rule 32 (exp -> INT .)
    RPAREN          reduce using rule 32 (exp -> INT .)
    SEMICOL         reduce using rule 32 (exp -> INT .)
    COMMA           reduce using rule 32 (exp -> INT .)
    TO              reduce using rule 32 (exp -> INT .)
    UNTIL           reduce using rule 32 (exp -> INT .)
    LBRACE          reduce using rule 32 (exp -> INT .)


state 18

    (33) exp -> FLOAT .

    DEC             reduce using rule 33 (exp -> FLOAT .)
    INC             reduce using rule 33 (exp -> FLOAT .)
    PLUS            reduce using rule 33 (exp -> FLOAT .)
    MINUS           reduce using rule 33 (exp -> FLOAT .)
    MULTIPLY        reduce using rule 33 (exp -> FLOAT .)
    DIVIDE          reduce using rule 33 (exp -> FLOAT .)
    POWER           reduce using rule 33 (exp -> FLOAT .)
    MODULUS         reduce using rule 33 (exp -> FLOAT .)
    AND             reduce using rule 33 (exp -> FLOAT .)
    OR              reduce using rule 33 (exp -> FLOAT .)
    GT              reduce using rule 33 (exp -> FLOAT .)
    LT              reduce using rule 33 (exp -> FLOAT .)
    GTE             reduce using rule 33 (exp -> FLOAT .)
    LTE             reduce using rule 33 (exp -> FLOAT .)
    EE              reduce using rule 33 (exp -> FLOAT .)
    NE              reduce using rule 33 (exp -> FLOAT .)
    THEN            reduce using rule 33 (exp -> FLOAT .)
    RPAREN          reduce using rule 33 (exp -> FLOAT .)
    SEMICOL         reduce using rule 33 (exp -> FLOAT .)
    COMMA           reduce using rule 33 (exp -> FLOAT .)
    TO              reduce using rule 33 (exp -> FLOAT .)
    UNTIL           reduce using rule 33 (exp -> FLOAT .)
    LBRACE          reduce using rule 33 (exp -> FLOAT .)


state 19

    (38) exp -> NOT . exp
    (10) exp -> . NAME LPAREN optargs RPAREN
    (15) exp -> . exp PLUS exp
    (16) exp -> . exp MINUS exp
    (17) exp -> . exp MULTIPLY exp
    (18) exp -> . exp DIVIDE exp
    (19) exp -> . exp POWER exp
    (20) exp -> . exp MODULUS exp
    (21) exp -> . exp AND exp
    (22) exp -> . exp OR exp
    (23) exp -> . exp GT exp
    (24) exp -> . exp LT exp
    (25) exp -> . exp GTE exp
    (26) exp -> . exp LTE exp
    (27) exp -> . exp EE exp
    (28) exp -> . exp NE exp
    (29) exp -> . NAME
    (30) exp -> . MINUS INT
    (31) exp -> . MINUS FLOAT
    (32) exp -> . INT
    (33) exp -> . FLOAT
    (34) exp -> . DEC exp
    (35) exp -> . INC exp
    (38) exp -> . NOT exp
    (39) exp -> . TRUE
    (40) exp -> . FALSE
    (41) exp -> . STRING
    (42) exp -> . CHAR
    (43) exp -> . LPAREN exp RPAREN

    NAME            shift and go to state 44
    MINUS           shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    DEC             shift and go to state 6
    INC             shift and go to state 7
    NOT             shift and go to state 19
    TRUE            shift and go to state 20
    FALSE           shift and go to state 21
    STRING          shift and go to state 22
    CHAR            shift and go to state 23
    LPAREN          shift and go to state 14

    exp                            shift and go to state 58

state 20

    (39) exp -> TRUE .

    DEC             reduce using rule 39 (exp -> TRUE .)
    INC             reduce using rule 39 (exp -> TRUE .)
    PLUS            reduce using rule 39 (exp -> TRUE .)
    MINUS           reduce using rule 39 (exp -> TRUE .)
    MULTIPLY        reduce using rule 39 (exp -> TRUE .)
    DIVIDE          reduce using rule 39 (exp -> TRUE .)
    POWER           reduce using rule 39 (exp -> TRUE .)
    MODULUS         reduce using rule 39 (exp -> TRUE .)
    AND             reduce using rule 39 (exp -> TRUE .)
    OR              reduce using rule 39 (exp -> TRUE .)
    GT              reduce using rule 39 (exp -> TRUE .)
    LT              reduce using rule 39 (exp -> TRUE .)
    GTE             reduce using rule 39 (exp -> TRUE .)
    LTE             reduce using rule 39 (exp -> TRUE .)
    EE              reduce using rule 39 (exp -> TRUE .)
    NE              reduce using rule 39 (exp -> TRUE .)
    THEN            reduce using rule 39 (exp -> TRUE .)
    RPAREN          reduce using rule 39 (exp -> TRUE .)
    SEMICOL         reduce using rule 39 (exp -> TRUE .)
    COMMA           reduce using rule 39 (exp -> TRUE .)
    TO              reduce using rule 39 (exp -> TRUE .)
    UNTIL           reduce using rule 39 (exp -> TRUE .)
    LBRACE          reduce using rule 39 (exp -> TRUE .)


state 21

    (40) exp -> FALSE .

    DEC             reduce using rule 40 (exp -> FALSE .)
    INC             reduce using rule 40 (exp -> FALSE .)
    PLUS            reduce using rule 40 (exp -> FALSE .)
    MINUS           reduce using rule 40 (exp -> FALSE .)
    MULTIPLY        reduce using rule 40 (exp -> FALSE .)
    DIVIDE          reduce using rule 40 (exp -> FALSE .)
    POWER           reduce using rule 40 (exp -> FALSE .)
    MODULUS         reduce using rule 40 (exp -> FALSE .)
    AND             reduce using rule 40 (exp -> FALSE .)
    OR              reduce using rule 40 (exp -> FALSE .)
    GT              reduce using rule 40 (exp -> FALSE .)
    LT              reduce using rule 40 (exp -> FALSE .)
    GTE             reduce using rule 40 (exp -> FALSE .)
    LTE             reduce using rule 40 (exp -> FALSE .)
    EE              reduce using rule 40 (exp -> FALSE .)
    NE              reduce using rule 40 (exp -> FALSE .)
    THEN            reduce using rule 40 (exp -> FALSE .)
    RPAREN          reduce using rule 40 (exp -> FALSE .)
    SEMICOL         reduce using rule 40 (exp -> FALSE .)
    COMMA           reduce using rule 40 (exp -> FALSE .)
    TO              reduce using rule 40 (exp -> FALSE .)
    UNTIL           reduce using rule 40 (exp -> FALSE .)
    LBRACE          reduce using rule 40 (exp -> FALSE .)


state 22

    (41) exp -> STRING .

    DEC             reduce using rule 41 (exp -> STRING .)
    INC             reduce using rule 41 (exp -> STRING .)
    PLUS            reduce using rule 41 (exp -> STRING .)
    MINUS           reduce using rule 41 (exp -> STRING .)
    MULTIPLY        reduce using rule 41 (exp -> STRING .)
    DIVIDE          reduce using rule 41 (exp -> STRING .)
    POWER           reduce using rule 41 (exp -> STRING .)
    MODULUS         reduce using rule 41 (exp -> STRING .)
    AND             reduce using rule 41 (exp -> STRING .)
    OR              reduce using rule 41 (exp -> STRING .)
    GT              reduce using rule 41 (exp -> STRING .)
    LT              reduce using rule 41 (exp -> STRING .)
    GTE             reduce using rule 41 (exp -> STRING .)
    LTE             reduce using rule 41 (exp -> STRING .)
    EE              reduce using rule 41 (exp -> STRING .)
    NE              reduce using rule 41 (exp -> STRING .)
    THEN            reduce using rule 41 (exp -> STRING .)
    RPAREN          reduce using rule 41 (exp -> STRING .)
    SEMICOL         reduce using rule 41 (exp -> STRING .)
    COMMA           reduce using rule 41 (exp -> STRING .)
    TO              reduce using rule 41 (exp -> STRING .)
    UNTIL           reduce using rule 41 (exp -> STRING .)
    LBRACE          reduce using rule 41 (exp -> STRING .)


state 23

    (42) exp -> CHAR .

    DEC             reduce using rule 42 (exp -> CHAR .)
    INC             reduce using rule 42 (exp -> CHAR .)
    PLUS            reduce using rule 42 (exp -> CHAR .)
    MINUS           reduce using rule 42 (exp -> CHAR .)
    MULTIPLY        reduce using rule 42 (exp -> CHAR .)
    DIVIDE          reduce using rule 42 (exp -> CHAR .)
    POWER           reduce using rule 42 (exp -> CHAR .)
    MODULUS         reduce using rule 42 (exp -> CHAR .)
    AND             reduce using rule 42 (exp -> CHAR .)
    OR              reduce using rule 42 (exp -> CHAR .)
    GT              reduce using rule 42 (exp -> CHAR .)
    LT              reduce using rule 42 (exp -> CHAR .)
    GTE             reduce using rule 42 (exp -> CHAR .)
    LTE             reduce using rule 42 (exp -> CHAR .)
    EE              reduce using rule 42 (exp -> CHAR .)
    NE              reduce using rule 42 (exp -> CHAR .)
    THEN            reduce using rule 42 (exp -> CHAR .)
    RPAREN          reduce using rule 42 (exp -> CHAR .)
    SEMICOL         reduce using rule 42 (exp -> CHAR .)
    COMMA           reduce using rule 42 (exp -> CHAR .)
    TO              reduce using rule 42 (exp -> CHAR .)
    UNTIL           reduce using rule 42 (exp -> CHAR .)
    LBRACE          reduce using rule 42 (exp -> CHAR .)


state 24

    (1) uz -> line uz .

    $end            reduce using rule 1 (uz -> line uz .)


state 25

    (3) uz -> error SEMICOL .

    $end            reduce using rule 3 (uz -> error SEMICOL .)


state 26

    (2) line -> stmt SEMICOL .

    error           reduce using rule 2 (line -> stmt SEMICOL .)
    MAKE            reduce using rule 2 (line -> stmt SEMICOL .)
    NAME            reduce using rule 2 (line -> stmt SEMICOL .)
    IF              reduce using rule 2 (line -> stmt SEMICOL .)
    DO              reduce using rule 2 (line -> stmt SEMICOL .)
    FOR             reduce using rule 2 (line -> stmt SEMICOL .)
    PRINT           reduce using rule 2 (line -> stmt SEMICOL .)
    RETURN          reduce using rule 2 (line -> stmt SEMICOL .)
    MINUS           reduce using rule 2 (line -> stmt SEMICOL .)
    INT             reduce using rule 2 (line -> stmt SEMICOL .)
    FLOAT           reduce using rule 2 (line -> stmt SEMICOL .)
    DEC             reduce using rule 2 (line -> stmt SEMICOL .)
    INC             reduce using rule 2 (line -> stmt SEMICOL .)
    NOT             reduce using rule 2 (line -> stmt SEMICOL .)
    TRUE            reduce using rule 2 (line -> stmt SEMICOL .)
    FALSE           reduce using rule 2 (line -> stmt SEMICOL .)
    STRING          reduce using rule 2 (line -> stmt SEMICOL .)
    CHAR            reduce using rule 2 (line -> stmt SEMICOL .)
    LPAREN          reduce using rule 2 (line -> stmt SEMICOL .)
    $end            reduce using rule 2 (line -> stmt SEMICOL .)


state 27

    (36) stmt -> exp DEC .

    SEMICOL         reduce using rule 36 (stmt -> exp DEC .)


state 28

    (37) stmt -> exp INC .

    SEMICOL         reduce using rule 37 (stmt -> exp INC .)


state 29
